--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -25,4 +25,23 @@
         android:id="@+id/pickerBtn"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+    <AutoCompleteTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/myLocation"
+        android:layout_above="@+id/pickerBtn"
+        android:layout_marginBottom="70dp"
+        android:layout_alignEnd="@+id/pickerBtn" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button"
+        android:layout_above="@+id/myLocation"
+        android:layout_alignParentStart="true"
+        android:onClick="onClick"/>
 </RelativeLayout>
