--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,7 +15,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="rawrrawrrawr"
         android:id="@+id/textView" />
 
     <Button
@@ -35,13 +35,15 @@
         android:layout_marginBottom="70dp"
         android:layout_alignEnd="@+id/pickerBtn" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
-        android:layout_above="@+id/myLocation"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/locList"
+        android:layout_below="@+id/pickerBtn"
         android:layout_alignParentStart="true"
-        android:onClick="onClick"/>
+        android:layout_alignEnd="@+id/myLocation"
+        android:textSize="18dp" />
+
 </RelativeLayout>
